--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ div.skill {
                 <!-- Large Button Start -->
                 <div class="large-btn">
                     <div class="content-inner">
-                        <a class="btn" href="https://drive.google.com/file/d/1eYRuXc1lqAE6jKuKNtNKi1rsmtNt8_lf/view?usp=sharing" target="_blank"><i class="fa fa-download"></i>Resume</a>
+                        <a class="btn" href="https://drive.google.com/file/d/1XNwIqVjpr1SUzC9OwLpgGihlVNk6Q68x/view?usp=drivesdk" target="_blank"><i class="fa fa-download"></i>Resume</a>
                         <a class="btn" href="#contact"><i class="fa fa-envelope"></i>Contact Me</a>
                     </div>
                 </div>
