--- a/index.html
+++ b/index.html
@@ -178,9 +178,17 @@ div.skill {
                             <h2>Experience</h2>
                         </div>
                         <div class="align-items-center">
+				<div class="edu-col border-btm">
+                                    <span>April-2023 <i>to </i> Present</span>
+                                    <h3>Java Developer</h3>
+                                    <p class="company-name">Codemech Solutions</p>
+                                    <!-- <p class="internship-details">I have worked in a travelling project.</p> -->
+                                    <p><strong>Tech Stack - </strong>Java, Struts 2.0</p>
+                                </div>
+
                             <div>
                                 <div class="edu-col border-btm">
-                                    <span>January-2022 <i>to </i> Present</span>
+                                    <span>January-2022 <i>to </i> March-2023</span>
                                     <h3>Junior Java Developer</h3>
                                     <p class="company-name">Dakshya Freondtech</p>
                                     <p class="internship-details">I have worked in shopify, bigcommerce, amazon, salesforce, wps, microsoft graph apis, itextPDF, sendgrid, zoho, apexcharts, 
