--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ div.skill {
                 <!-- Large Button Start -->
                 <div class="large-btn">
                     <div class="content-inner">
-                        <a class="btn" href="https://drive.google.com/file/d/1aEy_joYfcDySUMGzpf24b1LNeVhOEXBO/view?usp=drivesdk" target="_blank"><i class="fa fa-download"></i>Resume</a>
+                        <a class="btn" href="https://drive.google.com/file/d/1weA_NgiR1wZ2ULcDg45fRlOHu5o4pBsp/view?usp=sharing" target="_blank"><i class="fa fa-download"></i>Resume</a>
                         <a class="btn" href="#contact"><i class="fa fa-envelope"></i>Contact Me</a>
                     </div>
                 </div>
@@ -182,8 +182,8 @@ div.skill {
                                     <span>April-2023 <i>to </i> Present</span>
                                     <h3>Java Developer</h3>
                                     <p class="company-name">Codemech Solutions</p>
-                                    <!-- <p class="internship-details">I have worked in a travelling project.</p> -->
-                                    <p><strong>Tech Stack - </strong>Java, Struts 2.0</p>
+                                    <p class="internship-details">I am working in a travelling project which facilitates user with the booking of flight, accommodation, bus, rental car, transfer, parking etc.</p>
+                                    <p><strong>Tech Stack - </strong>Java, Struts 2.0, Springboot, Angular</p>
                                 </div>
 
                             <div>
@@ -253,6 +253,7 @@ and received 'Super Fast Developer Award' for completing almost all the projects
 		<div class="col-2 skill"><p>HTML</p></div>
 		</div>
 		<div class="row">
+		<div class="col-2 skill"><p>Angular</p></div>
 		<div class="col-2 skill"><p>CSS</p></div>
 		<div class="col-2 skill"><p>Java Script</p></div>
 		</div>	
@@ -307,6 +308,9 @@ and received 'Super Fast Developer Award' for completing almost all the projects
                             </div>
                             <div class="all-skills service-new-item all tech">
                                 <div class="all-skills-p" >CSS</div>
+                            </div>
+			    <div class="all-skills service-new-item all tech">
+                                <div class="all-skills-p" >Angular</div>
                             </div>
                             <div class="all-skills service-new-item all tech">
                                 <div class="all-skills-p" >Java Script</div>
